# kanran-hou

./: .gitignore  README.md  agents-spec-phase-1-foundation.md  agents-spec-phase-2-ai-engine.md  agents-spec-phase-3-frontend.md  agents-spec-phase-4-rag-ocr.md  agents-spec-phase-5-history.md  agents-spec-phase-6-operations.md  agents.md  ai-product-optimization-proposal.html  ai-product-optimization-proposal.md
backend/: .env  .env.example  .gitignore  admin-dashboard.html  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_phase6_tables.py
backend/app/: __init__.py  config.py  database.py
backend/app/middleware/: rate_limit.py  request_log.py
backend/app/models/: __init__.py  behavior.py  copywriting.py  daily_stats.py  feedback.py  feedback_clusters.py  user.py
backend/app/routers/: __init__.py  admin.py  analyze.py  feedback.py  health.py  history.py  knowledge.py  ocr.py
backend/app/schemas/: analysis.py  common.py  knowledge.py  ocr.py
backend/app/services/: cluster_feedback.py  scheduler.py
backend/app/services/analysis/: __init__.py  analyzer.py  models.py  parser.py  scorer.py
backend/app/services/knowledge/: __init__.py  engine.py  seeder.py
backend/app/services/llm/: __init__.py  client.py  deepseek.py  glm.py  logger.py  qwen.py  router.py
backend/app/services/ocr/: __init__.py  recognizer.py
backend/app/services/prompts/: __init__.py  base.py  constraint.py  ecommerce.py  local_tourism.py  manager.py  short_video.py  xiaohongshu.py
backend/app/services/suggestions/: __init__.py  generator.py  models.py
backend/app/utils/: __init__.py  string_utils.py  time_utils.py
backend/tests/: conftest.py  test_analyze.py  test_database.py  test_health.py  test_utils.py
database/: schema.sql  seeds.sql
docs/: copymind-analysis-preview.html
express-analysis/: express_data.json  main.py  process_data.py  (+2 more)
(+20 files in other folders)
