 [project]
 name = "copymind-backend"
 version = "0.1.0"
 description = "CopyMind AI 文案智能分析 - 后端服务"
 requires-python = ">=3.11"
 dependencies = [
     "fastapi>=0.111.0",
     "uvicorn[standard]>=0.29.0",
     "sqlalchemy[asyncio]>=2.0.30",
     "aiomysql>=0.2.0",
     "alembic>=1.13.0",
     "pydantic>=2.7.0",
     "pydantic-settings>=2.3.0",
     "loguru>=0.7.2",
     "python-dotenv>=1.0.1",
     "httpx>=0.27.0",
     "slowapi>=0.1.9",
     "tenacity>=8.3.0",
    "apscheduler>=3.10.0,"
 ]
 
 [project.optional-dependencies]
 dev = [
     "pytest>=8.2.0",
     "pytest-asyncio>=0.23.0",
     "httpx>=0.27.0",
     "aiosqlite>=0.20.0",
 ]
 
 [build-system]
 requires = ["setuptools>=70.0.0"]
 build-backend = "setuptools.build_meta"
